--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "type": "module",
   "scripts": {
     "start": "vite",
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"node --loader ts-node/esm server/index.ts\"",
+    "dev:client": "vite",
+    "dev:server": "node --loader ts-node/esm server/index.ts",
     "build": "vite build",
+    "build:server": "tsc -p tsconfig.server.json",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:prod": "node dist/server/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
     "lucide-react": "^0.344.0",
     "pocketbase": "^0.21.1",
     "react": "^18.3.1",
@@ -20,16 +26,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
+    "concurrently": "^8.2.2",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
