--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^7.7.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
